Add MailService Add password reset endpoints Add password reset methods in UserService
